--- a/Rotary Plotter Arduino Code v.3
+++ b/Rotary Plotter Arduino Code v.3
@@ -4,36 +4,35 @@
 //Define pin functions on Arduino
   //Limit Switch used to determine X-axis position of motor.
 #define limitSwitch 13
-  //X-Axis Stepper Motor Pins.
+  //X-Axis Stepper Motor Pins, note that MS Pathways are not defined because hardwired HIGH off 5v power as desired.
 #define XStp 5
 #define XDir 4
-    //MS Pathways are not defined because hardwired HIGH as desired
-  //Y-Axis Stepper Motor Pins.
+  //Y-Axis Stepper Motor Pins, note that MS Pathways are not defined because hardwired HIGH off 5v power as desired.
 #define YStp 3
 #define YDir 2
-    //MS Pathways are not defined because hardwired HIGH as desired
+
+//Declare Servo Motor
+Servo servoMotor;
  
 //Declare variables for functions
   //Used by Serial Connection to communicate
 char user_input;
-   //Tracks Position of Motors, relative to start times
-int XStepperPosition;
-int YStepperPosition;
+   //Tracks Position of Motors, relative to start times. xStepperPosition initially set via xStepperReset. yStepperPosition set by physicial location on startup.
+int xStepperPosition;
+int yStepperPosition;
 int servoPosition;
 
   //Manual Inputs of Appropriate Values for various hardware components
+    //Servo state variables set the height of the piston necessary for various functions.
 int servoUpState = 70;
 int servoDownState = 55;
 int servoLoadState = 90;
-    //Total number of steps available to X Axis and desired Bit Depth, followed by various things that occur because of this
+    //Manual input of total number of steps available to X Axis and desired Bit Depth, followed by various things that occur because of this
 int xSteps = 4420; 
-int dotBitDepth = 12;  
+int dotBitDepth = 11;  
 int stepsPerDot = (dotBitDepth - 1) * 2;
 int xDots = (xSteps - (xSteps % stepsPerDot)) / stepsPerDot;
 int margin = (xSteps % stepsPerDot) - ((xSteps % stepsPerDot) % 2) / 2;
-
-//Declare Servo Motor
-Servo servoMotor;
 
 //Setup Functions
 void setup() {
@@ -68,7 +67,7 @@ void setup() {
   //Pull X-Axis Stepper to Home Position
   YStepForward(1000);
   YStepBackward(1000);
-  YStepperPosition = 0;
+  yStepperPosition = 0;
   Serial.println("Y Ready");
   XStepForward(1000);
   Serial.println("X Ready");
@@ -77,7 +76,7 @@ void setup() {
     delay(1);
   }
   delay(100);
-  XStepperReset();
+  xStepperReset();
   Serial.println("Reset Done");
 }
 
@@ -110,7 +109,7 @@ void XStepForward(int y) {
     delay(1);
     digitalWrite(XStp,LOW);
     delay(1);
-    XStepperPosition = XStepperPosition + 1;
+    xStepperPosition = xStepperPosition + 1;
   }
 }
 
@@ -121,17 +120,17 @@ void XStepBackward(int y) {
     delay(1);
     digitalWrite(XStp,LOW);
     delay(1);
-    XStepperPosition = XStepperPosition - 1;
+    xStepperPosition = xStepperPosition - 1;
   }
 }
 
-void XStepperReset() {
+void xStepperReset() {
   XStepForward(10);
   while(digitalRead(limitSwitch)) {
     XStepBackward(1);
     delay(1);
   }
-  XStepperPosition = 0;
+  xStepperPosition = 0;
 }
 
 void YStepForward(int y) {
@@ -141,7 +140,7 @@ void YStepForward(int y) {
     delay(1);
     digitalWrite(YStp,LOW);
     delay(1);
-    YStepperPosition = YStepperPosition + 1;
+    yStepperPosition = yStepperPosition + 1;
   }
 }
 
@@ -152,7 +151,7 @@ void YStepBackward(int y) {
     delay(1);
     digitalWrite(YStp,LOW);
     delay(1);
-    YStepperPosition = YStepperPosition - 1;
+    yStepperPosition = yStepperPosition - 1;
   }
 }
 
@@ -164,7 +163,7 @@ void servoLoad() {
 }
 
 void xSet(int x) {
-  int reqDelta = x - XStepperPosition;
+  int reqDelta = x - xStepperPosition;
   if (reqDelta >= 0) {
     XStepForward(abs(reqDelta));
   }
@@ -174,7 +173,7 @@ void xSet(int x) {
 }
 
 void ySet(int y) {
-  int reqDelta = y - YStepperPosition;
+  int reqDelta = y - yStepperPosition;
   if (reqDelta >= 0) {
     YStepForward(abs(reqDelta));
   }
@@ -188,7 +187,7 @@ void drawDot(int dot, int depth) {
   int xDotStartingPosition = margin + 1 + (stepsPerDot * (dot - 1));
   int xDotCenter = xDotStartingPosition + roundDown((stepsPerDot - 1) / 2);
   xSet(xDotCenter);
-  int yDotCenter = YStepperPosition + roundDown((stepsPerDot - 1) / 2);
+  int yDotCenter = yStepperPosition + roundDown((stepsPerDot - 1) / 2);
   ySet(yDotCenter);
   for(int x = 1; x <= depth; x++) {
     servoMotor.write(servoDownState);
