Update Rotary Plotter Arduino Code v.3

--- a/Rotary Plotter Arduino Code v.3
+++ b/Rotary Plotter Arduino Code v.3
@@ -225,6 +225,8 @@ void drawDot(int xDot, int yDot, int depth) {
   ySet(yDotStartingPosition);
 }
 
+  //ACCESSORY FUNCTIONS
+
 int roundDown(int x) {
   return x - (x % 1);
 }
